setup mongodb server to addproperty.html and editproperty.html to all the fills, created blueprint folders and modules and helpers

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGO_URI="mongodb+srv://rneumann:motorola@myfirstcluster-va4q3.mongodb.net/seMgmtAppDB?retryWrites=true&w=majority"
-SECRET_KEY="asdfgh"
+MONGO_URI='mongodb+srv://rneumann:motorola@myfirstcluster-va4q3.mongodb.net/seMgmtAppDB?retryWrites=true&w=majority'
